--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,8 @@
   "name": "alares-server-client",
   "version": "1.0.0",
   "description": "Servidor responsavel por todos os planos e pedidos e autenticação do usuário na aplicação",
-  "main": "index.js",
+  "main": "./src/web/index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,5 +20,23 @@
   "bugs": {
     "url": "https://github.com/klayton-leandro/alares/issues"
   },
-  "homepage": "https://github.com/klayton-leandro/alares#readme"
+  "homepage": "https://github.com/klayton-leandro/alares#readme",
+  "dependencies": {
+    "@koa/cors": "^4.0.0",
+    "@koa/multer": "^3.0.2",
+    "@koa/router": "^12.0.0",
+    "debug": "^4.3.4",
+    "dotenv": "^16.0.3",
+    "firebase": "^9.20.0",
+    "firebase-admin": "^11.7.0",
+    "http-status-codes": "^2.2.0",
+    "joi": "^17.9.1",
+    "knex": "^2.4.2",
+    "koa": "^2.14.2",
+    "koa-bodyparser": "^4.4.0",
+    "koa2-swagger-ui": "^5.7.0",
+    "mysql": "^2.18.1",
+    "nodemon": "^2.0.22",
+    "sqlite3": "^5.1.6"
+  }
 }
