--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "@koa/cors": "^4.0.0",
     "@koa/multer": "^3.0.2",
     "@koa/router": "^12.0.0",
+    "bcryptjs": "^2.4.3",
     "debug": "^4.3.4",
     "dotenv": "^16.0.3",
     "firebase": "^9.20.0",
@@ -39,6 +40,7 @@
     "koa-bodyparser": "^4.4.0",
     "koa2-swagger-ui": "^5.7.0",
     "mysql": "^2.18.1",
+    "mysql2": "^3.2.3",
     "nodemon": "^2.0.22",
     "sqlite3": "^5.1.6"
   }
